import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
import org.sonarsource.kotlin.buildsrc.tasks.CreateKotlinGradleRuleStubsTask
import org.sonarsource.kotlin.buildsrc.tasks.CreateKotlinRuleStubsTask

plugins {
    java
    id("jacoco")
    id("com.jfrog.artifactory") version "5.2.5"
    id("org.sonarqube") version "7.3.1.8318"
    id("org.jetbrains.kotlin.jvm") apply false
    id("com.diffplug.spotless") version "6.25.0"
    `maven-publish`
    signing
}

val projectTitle: String by project

configure(subprojects.filter { it.name != "kotlin-checks-test-sources" }) {
    apply(plugin = "com.diffplug.spotless")

    configure<com.diffplug.gradle.spotless.SpotlessExtension> {

        lineEndings = com.diffplug.spotless.LineEnding.UNIX

        fun SourceSet.findSourceFilesToTarget() = allJava.srcDirs.flatMap { srcDir ->
            project.fileTree(srcDir).filter { file ->
                file.name.endsWith(".kt") || (file.name.endsWith(".java") && file.name != "package-info.java")
            }
        }

        kotlin {
            licenseHeaderFile(rootProject.file("LICENSE_HEADER"))

            target(
                project.sourceSets.main.get().findSourceFilesToTarget(),
                project.sourceSets.test.get().findSourceFilesToTarget()
            )
        }
        kotlinGradle {
            target("*.gradle.kts")
            ktlint()
                .setEditorConfigPath("$rootDir/.editorconfig")
                .editorConfigOverride(mapOf(
                    // setting this in .editorconfig doesn't seem to have any effect, at least on ktlint 1.1.1
                    // also see https://github.com/diffplug/spotless/issues/1913
                    "max_line_length" to "off",
                ))
        }

        format("misc") {
            // define the files to apply `misc` to
            target("*.gradle", "*.md", ".gitignore")

            // define the steps to apply to those files
            trimTrailingWhitespace()
            indentWithSpaces()
            endWithNewline()
        }
        format("javaMisc") {
            target("src/**/package-info.java")
            licenseHeaderFile(rootProject.file("LICENSE_HEADER"), "@javax.annotation")
        }
    }
}

allprojects {
    apply<JavaPlugin>()
    apply(plugin = "jacoco")
    apply(plugin = "com.jfrog.artifactory")
    apply(plugin = "maven-publish")
    apply(plugin = "signing")

    gradle.projectsEvaluated {
        tasks.withType<JavaCompile> {
            if (project.hasProperty("warn")) {
                options.compilerArgs = options.compilerArgs + "-Xlint:unchecked" + "-Xlint:deprecation"
            } else {
                options.compilerArgs = options.compilerArgs + "-Xlint:-unchecked" + "-Xlint:-deprecation"
            }
        }
    }

    val buildNumber: String? = System.getProperty("buildNumber")

    ext {
        set("buildNumber", buildNumber)
    }

    // Replaces the version defined in sources, usually x.y-SNAPSHOT, by a version identifying the build.
    if (project.version.toString().endsWith("-SNAPSHOT") && buildNumber != null) {
        val versionSuffix =
            if (project.version.toString().count { it == '.' } == 1) ".0.$buildNumber" else ".$buildNumber"
        project.version = project.version.toString().replace("-SNAPSHOT", versionSuffix)
    }

    repositories {
        mavenCentral()
        maven(url = "https://packages.jetbrains.team/maven/p/ij/intellij-dependencies") {
            content {
                includeGroup("org.jetbrains.kotlin")
            }
        }
    }

    configurations.matching { it.name == "kotlinBouncyCastleConfiguration" }.configureEach {
        // Workaround for https://github.com/gradle/gradle/issues/35309.
        // When any of cloud-native Gradle plugins is applied in a project
        // whose Gradle version embeds Kotlin <2.3.20, there will be an unnecessary dependency on build classpath.
        withDependencies { clear() }
    }
}

subprojects {
    val javadoc: Javadoc by tasks

    // do not publish to Artifactory by default
    tasks.artifactoryPublish {
        skip = true
    }

    java.sourceCompatibility = JavaVersion.VERSION_17
    tasks.withType<JavaCompile> {
        options.encoding = "UTF-8"
        options.release.set(java.sourceCompatibility.majorVersion.toInt())
    }

    tasks.withType<KotlinCompile>().all {
        compilerOptions.jvmTarget = JvmTarget.fromTarget(java.sourceCompatibility.toString())
        compilerOptions.freeCompilerArgs.add("-Xjdk-release=" + java.sourceCompatibility.toString())
    }

    jacoco {
        toolVersion = "0.8.15"
    }

    tasks.jacocoTestReport {
        reports {
            xml.required.set(true)
            csv.required.set(false)
            html.required.set(false)
        }
    }

    // when subproject has Jacoco pLugin applied we want to generate XML report for coverage
    plugins.withType<JacocoPlugin> {
        tasks["test"].finalizedBy("jacocoTestReport")
    }

    configurations {
        // include compileOnly dependencies during test
        testImplementation {
            extendsFrom(configurations.compileOnly.get())
        }
    }

    if (!project.path.startsWith(":its") && !project.path.startsWith(":private:its")) {
        tasks.test {
            useJUnitPlatform()
        }
    }

    tasks.test {
        testLogging {
            exceptionFormat =
                org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL // log the full stack trace (default is the 1st line of the stack trace)
            events("skipped", "failed") // verbose log for failed and skipped tests (by default the name of the tests are not logged)
        }

        systemProperties = buildMap {
            System.getProperties().filterKeys {
                it is String &&
                    (it.startsWith("orchestrator") || it.startsWith("sonar") || it == "buildNumber" || it == "slangVersion")
            }.forEach { (k, v) -> put(k as String, v) }

            if (containsKey("buildNumber") && !containsKey("slangVersion")) {
                put("slangVersion", version)
            }
        }
    }

    val sourcesJar by tasks.registering(Jar::class) {
        dependsOn(JavaPlugin.CLASSES_TASK_NAME)
        archiveClassifier.set("sources")
        from(sourceSets.main.get().allSource)
    }

    val javadocJar by tasks.registering(Jar::class) {
        dependsOn(javadoc)
        archiveClassifier.set("javadoc")
        from(tasks["javadoc"])
    }

    publishing {
        publications {
            create<MavenPublication>("mavenJava") {
                pom {
                    name.set(projectTitle)
                    description.set(project.description)
                    url.set("http://www.sonarqube.org/")
                    organization {
                        name.set("SonarSource")
                        url.set("http://www.sonarqube.org/")
                    }
                    licenses {
                        license {
                            name.set("SSALv1")
                            url.set("https://sonarsource.com/license/ssal/")
                            distribution.set("repo")
                        }
                    }
                    scm {
                        url.set("https://github.com/SonarSource/sonar-kotlin")
                    }
                    developers {
                        developer {
                            id.set("sonarsource-team")
                            name.set("SonarSource Team")
                        }
                    }
                }
            }
        }
    }

    signing {
        val signingKeyId: String? by project
        val signingKey: String? by project
        val signingPassword: String? by project
        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
        sign(publishing.publications)
        setRequired { gradle.taskGraph.hasTask(":artifactoryPublish") }
    }

    tasks.withType<Sign> {
        onlyIf {
            val artifactorySkip: Boolean = tasks.artifactoryPublish.get().skip
            !artifactorySkip &&
                gradle.taskGraph.hasTask(":artifactoryPublish")
        }
    }
}

sonarqube {
    properties {
        property("sonar.projectName", "SonarKotlin")
        property("sonar.projectKey", "SonarSource_sonar-kotlin")
        property("sonar.links.ci", "https://cirrus-ci.com/github/SonarSource/sonar-kotlin")
        property("sonar.projectName", projectTitle)
        property("sonar.links.scm", "https://github.com/SonarSource/sonar-kotlin")
        property("sonar.links.issue", "https://jira.sonarsource.com/browse/SONARKT")
        property("sonar.exclusions", "**/build/**/*")
        property("sonar.sca.exclusions", "**/its/**,**/kotlin-checks-test-sources/**,**/samples/**")
        property(
            "sonar.coverage.jacoco.aggregateXmlReportPaths",
            "${project.rootDir}/sonar-kotlin-plugin/build/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml"
        )
    }
}

artifactory {
    clientConfig.info.buildName = "sonar-kotlin"
    clientConfig.info.buildNumber = System.getenv("BUILD_NUMBER")
    clientConfig.isIncludeEnvVars = true
    clientConfig.envVarsExcludePatterns =
        "*password*,*PASSWORD*,*secret*,*MAVEN_CMD_LINE_ARGS*,sun.java.command,*token*,*TOKEN*,*LOGIN*,*login*,*key*,*KEY*,*PASSPHRASE*,*signing*"

    // Define the artifacts to be deployed to https://binaries.sonarsource.com on releases
    clientConfig.info.addEnvironmentProperty("ARTIFACTS_TO_PUBLISH", "${project.group}:sonar-kotlin-plugin:jar")
    clientConfig.info.addEnvironmentProperty("ARTIFACTS_TO_DOWNLOAD", "")
    // The name of this variable is important because it"s used by the delivery process when extracting version from Artifactory build info.
    clientConfig.info.addEnvironmentProperty("PROJECT_VERSION", version.toString())

    setContextUrl(System.getenv("ARTIFACTORY_URL"))
    publish {
        repository {
            setRepoKey(System.getenv("ARTIFACTORY_DEPLOY_REPO"))
            setUsername(System.getenv("ARTIFACTORY_DEPLOY_USERNAME"))
            setPassword(System.getenv("ARTIFACTORY_DEPLOY_PASSWORD"))
        }

        defaults {
            setProperties(
                mapOf(
                    "build.name" to "sonar-kotlin",
                    "build.number" to System.getenv("BUILD_NUMBER"),
                    "pr.branch.target" to System.getenv("PULL_REQUEST_BRANCH_TARGET"),
                    "pr.number" to System.getenv("PULL_REQUEST_NUMBER"),
                    "vcs.branch" to System.getenv("GIT_BRANCH"),
                    "vcs.revision" to System.getenv("GIT_COMMIT"),
                    "version" to project.version as String,
                )
            )
            publications("mavenJava")
            setPublishPom(true) // Publish generated POM files to Artifactory (true by default)
            setPublishIvy(false) // Publish generated Ivy descriptor files to Artifactory (true by default)
        }
    }
}

tasks.register<CreateKotlinRuleStubsTask>("setupRuleStubs") {
    group = "Rules"
    description = "Generate required stubs for a new Kotlin rule"
    finalizedBy(":sonar-kotlin-plugin:ruleApiGenerateRuleKotlin")
}

tasks.register<CreateKotlinGradleRuleStubsTask>("setupGradleRuleStubs") {
    group = "Rules"
    description = "Generate required stubs for a new Kotlin Gradle DSL rule"
    finalizedBy(":sonar-kotlin-plugin:ruleApiGenerateRuleKotlin")
}
